--- a/404.md
+++ b/404.md
@@ -1,6 +1,6 @@
 ---
 title: "Page not found"
-permalink: /404/
+permalink: /404.html
 ---
 
-The page you were looking for does not exist.
+The page you were looking for does not exist. 
